Register and login index

--- a/AnimalShelter.Client/index.html
+++ b/AnimalShelter.Client/index.html
@@ -4,17 +4,10 @@
     <meta charset="UTF-8" />
     <title>Animal Shelter</title>
     <link rel="stylesheet" href="styles/main.css" />
+    <script src="scripts/main.js" defer></script>
   </head>
   <body>
-    <nav>
-      <span class="logo">🐾 Animal Shelter</span>
-      <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="pages/animals.html">Animals</a></li>
-        <li><a href="pages/login.html">Login</a></li>
-        <li><a href="pages/register.html">Register</a></li>
-      </ul>
-    </nav>
+    <div id="header"></div>
 
     <header class="home-header">
       <h1>Let's find a new friend! 🐶🐱</h1>
