--- a/AnimalShelter.Client/nav/nav.html
+++ b/AnimalShelter.Client/nav/nav.html
@@ -3,7 +3,12 @@
   <ul class="nav-links">
     <li><a href="../index.html">Home</a></li>
     <li><a href="../pages/animals.html">Animals</a></li>
-    <li><a href="../pages/login.html">Login</a></li>
-    <li><a href="../pages/register.html">Register</a></li>
+    <li><a href="../pages/login.html" id="login-link">Login</a></li>
+    <li><a href="../pages/register.html" id="register-link">Register</a></li>
+    <li>
+      <a href="#" id="logout-link" style="display: none" id="logout-btn"
+        >Logout</a
+      >
+    </li>
   </ul>
 </nav>
