--- a/AnimalShelter.Client/pages/register.html
+++ b/AnimalShelter.Client/pages/register.html
@@ -5,15 +5,16 @@
     <title>Register - Animal Shelter</title>
     <link rel="stylesheet" href="../styles/main.css" />
     <script src="../scripts/main.js" defer></script>
+    <script src="../scripts/register.js" defer></script>
   </head>
   <body>
     <div id="header"></div>
 
     <section class="register">
       <h2>Register</h2>
-      <form action="register-process.php" method="POST">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" required />
+      <form id="register-form">
+        <label for="username">Username</label>
+        <input type="text" id="username" name="username" required />
 
         <label for="email">Email</label>
         <input type="email" id="email" name="email" required />
@@ -21,24 +22,8 @@
         <label for="password">Password</label>
         <input type="password" id="password" name="password" required />
 
-        <label for="confirm-password">Confirm Password</label>
-        <input
-          type="password"
-          id="confirm-password"
-          name="confirm-password"
-          required
-        />
-
         <button type="submit" class="btn">Register</button>
       </form>
     </section>
-
-    <script>
-      fetch('../header.html')
-        .then((response) => response.text())
-        .then((data) => {
-          document.getElementById('header').innerHTML = data;
-        });
-    </script>
   </body>
 </html>
